# node-state-manager

./: AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  run_tests.sh
NodeStateAccess/: CMakeLists.txt  Makefile.am  NodeStateAccess.c  NodeStateAccess.cpp  NodeStateAccess.h  NodeStateAccess.hpp  NodeStateConsumer_StubImpl.cpp  NodeStateConsumer_StubImpl.h  NodeStateLifecycleControl_StubImpl.cpp  NodeStateLifecycleControl_StubImpl.h  SimpleTimer.cpp  SimpleTimer.h
NodeStateAccess/interfaces/: CMakeLists.txt  NodeStateMachineTest.fdepl  NodeStateMachineTest.fidl  NodeStateManager.fdepl  NodeStateManager.fidl  NodeStateManagerTypes.fdepl  NodeStateManagerTypes.fidl
NodeStateAccess/interfaces/cmake/: core_stub_config.cmake.in  someip_proxy_config.cmake.in  someip_stub_config.cmake.in
NodeStateAccess/model/: org.genivi.NodeStateManager.Consumer.xml  org.genivi.NodeStateManager.LifecycleConsumer.xml  org.genivi.NodeStateManager.LifecycleControl.xml
NodeStateAccessStub/: Makefile.am  NodeStateAccess.c  NodeStateAccess.h
NodeStateAccessStub/model/: org.genivi.NodeStateManager.Consumer.xml  org.genivi.NodeStateManager.LifecycleControl.xml
NodeStateMachineStub/: CMakeLists.txt  Makefile.am  NodeStateMachine.c  NodeStateMachine.cpp  NodeStateMachine.h  NodeStateMachine.hpp  Test_StubImpl.cpp  Test_StubImpl.hpp
NodeStateMachineTest/: CMakeLists.txt  Makefile.am  NodeStateMachine.c  NodeStateMachine.h  NodeStateTest.c  NodeStateTest_GENIVI.cpp  NodeStateTest_STRESS.cpp  NodeStateTest_TIMEOUT.cpp  NodeStateTest_WATCHDOG.cpp  org.genivi.NodeStateMachineTest.xml
NodeStateMachineTest/test/: run_test.sh
NodeStateManager/: CMakeLists.txt  Makefile.am  NodeStateManager.c  NodeStateManager.h  NodeStateTypes.h  Watchdog.cpp  Watchdog.hpp
NodeStateManager/config/: node-state-manager.pc.in  nodestatemanager-daemon.service  nodestatemanager-daemon.service.in  org.genivi.NodeStateManager.LifeCycleControl.service.in  org.genivi.NodeStateManager.conf
NodeStateTest/: Makefile.am  NodeStateMachineTest.c  NodeStateMachineTest.h  NodeStateTest.c
devops/dockerfiles/: Dockerfile_genivi_nsm_dev  README
doc/: NSM_ComponentSpecification.docx
