#######################################################################################################################
#
# Copyright (C) 2012 Continental Automotive Systems, Inc.
#
# Author: Jean-Pierre.Bogler@continental-corporation.com
#
# Makefile template for the NodeStateManager
#
# Process this file with automake to produce a Makefile.in.
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.
#
# Date             Author              Reason
# 24.01.2013       Jean-Pierre Bogler  Added NodeStateTest to sub directories
# 14.03.2013       Jean-Pierre Bogler  Updated usage for real NodeStateAccess library
#
#######################################################################################################################

ACLOCAL_AMFLAGS=-I m4
SUBDIRS = NodeStateAccess NodeStateMachineStub NodeStateManager NodeStateTest


